# TugasPBOUAS

./: .gitignore  CMakeLists.txt  backend.h  barang.cpp  frontend.cpp  frontend.h  header_dengan_code.h  header_tanpa_code.cpp  header_tanpa_code.h  keranjang.cpp  main.cpp  pengguna.cpp  penyimpanan.cpp  perhitungan.cpp  stringformat.h
data/barang/: brg1.txt  brg2.txt  brg3.txt
data/pengguna/: peng-Joni.txt
